--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome</h1>
+        <p class="lead">Please select your option below</p>
+        <hr class="my-4">
+        <p class="lead">
+            <a [routerLink]='['customers']' role='button' class="btn btn-primary btn-lg"> Customers </a>
+        </p>
+    </div>
+</div>
