--- a/src/app/customers/customer/customer.component.html
+++ b/src/app/customers/customer/customer.component.html
@@ -1,1 +1,5 @@
-<p>customer works!</p>
+<div class="container">
+  <app-add-customer></app-add-customer>
+  <app-customer-list></app-customer-list>
+  <app-edit-customer></app-edit-customer>
+</div>
