--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -1,1 +1,25 @@
-<p>customer-list works!</p>
+<h3>Customers</h3>
+<table class="table table-hover">
+  <thead>
+    <tr class="table-primary">
+      <th scope="col">Name</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Addres</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+      <th scope="row"></th>
+      <td></td>
+      <td></td>
+      <td></td>
+      <th>
+        <a>edit</a>
+        <br />
+        <a>delete</a>
+      </th>
+    </tr>
+  </tbody>
+</table>
