Minor fixes and format changes

--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -4,21 +4,22 @@
     <tr class="table-primary">
       <th scope="col">Name</th>
       <th scope="col">Phone</th>
-      <th scope="col">Addres</th>
-      <th scope="col"></th>
+      <th scope="col">Address</th>
+      <th scope="col">Membership</th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <tr>
       <th scope="row"></th>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>-</td>
+      <td>-</td>
+      <td>-</td>
       <th>
-        <a>edit</a>
-        <br />
-        <a>delete</a>
+        <a>Edit</a>
+        <br>
+        <a>Delete</a>
       </th>
     </tr>
   </tbody>
