--- a/src/app/customers/edit-customer/edit-customer.component.html
+++ b/src/app/customers/edit-customer/edit-customer.component.html
@@ -1,6 +1,6 @@
 <h3>Add Customer</h3>
 
-<form class="corm-inline mb-4">
+<form class="form-inline mb-4">
   <label for="Name" class="sr-only">Name</label>
   <div class="input-group mb-2 mr-sm-2">
     <input
