--- a/src/app/customers/edit-customer/edit-customer.component.html
+++ b/src/app/customers/edit-customer/edit-customer.component.html
@@ -1,4 +1,4 @@
-<h3>Add Customer</h3>
+<!-- <h3>Add Customer</h3>
 
 <form class="form-inline mb-4">
   <label for="Name" class="sr-only">Name</label>
@@ -41,3 +41,4 @@
   </div>
   <button type="submit" class="btn btn-primary mb-2">Add Customer</button>
 </form>
+ -->
