all merge in one file

--- a/src/app/customers/add-customer/add-customer.component.html
+++ b/src/app/customers/add-customer/add-customer.component.html
@@ -42,5 +42,5 @@
       <option>Platinum</option>
     </select>
   </div>
-  <button type="submit" class="btn btn-primary mb-2" >Add Customer</button>
+  <button type="submit" class="btn btn-primary mb-2" (click)="createCustomer()" >Add Customer</button>
 </form>
