--- a/src/app/customers/edit-customer/edit-customer.component.html
+++ b/src/app/customers/edit-customer/edit-customer.component.html
@@ -1,6 +1,10 @@
-<!-- <h3>Add Customer</h3>
+<h3>Update Customer</h3>
 
-<form class="form-inline mb-4">
+<form
+  class="form-inline mb-4"
+  [formGroup]="customerForm"
+  (ngSubmit)="updateCustomer()"
+>
   <label for="Name" class="sr-only">Name</label>
   <div class="input-group mb-2 mr-sm-2">
     <input
@@ -39,6 +43,7 @@
       <option>Platinum</option>
     </select>
   </div>
-  <button type="submit" class="btn btn-primary mb-2">Add Customer</button>
+  <button (click)="updateCustomer()" type="submit" class="btn btn-primary mb-2">
+    Update Customer
+  </button>
 </form>
- -->
